<resources>
    <string name="app_name">InmoPeru</string>
    <string name="title_home">Inicio</string>
    <string name="title_account">Mi Cuenta</string>
    <string name="title_wish">Solicitudes</string>
    <string name="title_contact">Contactenos</string>
    <string name="title_login">Login</string>
    <string name="title_registrarse">Registro</string>
    <string name="title_bienvenido">¡Bienvenido!</string>
    <string name="title_dni">DNI</string>
    <string name="title_nombre">Nombre</string>
    <string name="title_apellido">Apellidos</string>
    <string name="title_email">E-mail</string>
    <string name="title_contraseña">Contraseña</string>
    <string name="title_Registrarme">Registrarme</string>
    <string name="title_ingresar_soli">Ingresar Solicitud</string>
    <string name="title_ingresar">Ingresar</string>
    <string name="title_ingresar_recl">Ingresar Reclamo</string>
    <string name="title_olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="title_restaurar_contrasena">Restaurar Contraseña</string>
    <string name="title_text_restaurar_contrasena">Ingresa tu correo electronico y te enviaremos tu contraseña</string>
    <string name="title_contactenos">Contacto</string>
    <string name="title_activity_contact_fragment">Map</string>
    <string name="title_send_solicitud">Enviar Solicitud</string>
    <string name="title_send_solicitud_2">Enviar una Solicitud</string>
    <string name="title_email_2">E-mail*</string>
    <string name="title_asunto">Asunto*</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_descripcion_solicitud">Descripcion*</string>
    <string name="title_photo">Tomar Foto</string>
    <string name="title_address1">LOS OLIVOS</string>
    <string name="title_address2">SAN ISIDRO</string>
    <string name="title_address3">MIRAFLORES</string>
    <string name="title_address4">SAN MIGUEL</string>
    <string name="title_address5">SAN BORJA</string>
    <string name="title_address6">JESUS MARIA</string>
    <string name="title_fecha">Fecha</string>
    <string name="title_generar_reclamo">Generar Reclamo</string>
    <string name="title_title">Titulo*</string>
    <string name="title_number">Numero de Telefono</string>
    <string name="title_noticia">Ofertas</string>
    <string name="title_compra">Comprar</string>
    <string name="title_registrar_compra">Registrar Solicitud</string>
    <string name="title_nombre_apellidos">Nombres y apellidos</string>
    <string name="title_direccion">Direccion</string>
    <string name="title_nrocuenta">Nro Cuenta</string>
    <string name="title_fecha_vencimiento">Fecha de Vencimiento</string>
    <string name="title_cas_id">CAS ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>