<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_wish"
        android:icon="@drawable/ic_baseline_apartment_24"
        android:title="@string/title_wish" />
    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_contact_black_24dp"
        android:title="@string/title_contact" />
    <item
        android:id="@+id/navigation_new"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/title_noticia" />
</menu>
