<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true"
    tools:context=".ui.account.AccountFragment"
    android:background="@drawable/background_inmo_store">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="35dp"
    >

    <EditText
        android:id="@+id/txt_dni"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_dni"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
            android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="100dp"
        android:layout_height="79dp"
        android:src="@drawable/logo_inmo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/lbl_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_registrarse"
        android:textColor="@color/colorGray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_nombre"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="636dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/separate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_apellido"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_apellido"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_texto2"
        android:layout_width="371dp"
        android:layout_height="22dp"
        android:layout_marginTop="528dp"
        android:text="La contraseña debe tener al menos 6 caracteres"
        android:textColor="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="348dp"
        android:layout_height="52dp"
        android:layout_marginTop="652dp"
        android:background="@drawable/button_first_bg"
        android:text="@string/title_ingresar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="348dp"
        android:layout_height="52dp"
        android:layout_marginTop="568dp"
        android:background="@drawable/button_first_bg"
        android:text="@string/title_Registrarme"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:layout_marginTop="465dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_contraseña"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:layout_marginTop="314dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_number"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_number"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>