<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true"
    tools:context=".ui.wish.WishFragment"
    android:background="@drawable/background_inmo_store">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="35dp"
    >

    <TextView
        android:id="@+id/lbl_comprar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_registrar_compra"
        android:textColor="@color/colorGray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombre_compra"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/custom_edit_txt"
        android:editable="false"
        android:ems="10"
        android:hint="@string/title_nombre_apellidos"
        android:textColorHint="#60000000"
        android:inputType="none"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/ddl_tipo_comprobante"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/spinner_bg"
        android:hint="@string/title_nrocuenta"
        android:textColorHint="#60000000"
        android:spinnerMode="dropdown"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_direccion_compra"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_direccion"
        android:textColorHint="#60000000"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nro_cuenta"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginTop="448dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_nrocuenta"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_fecha_vencimiento_compra"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginTop="520dp"
        android:background="@drawable/custom_edit_txt"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/title_fecha_vencimiento"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_registro_compra"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginTop="680dp"
        android:background="@drawable/button_first_bg"
        android:text="@string/title_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_cas_id"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginTop="596dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_cas_id"
        android:inputType="numberPassword"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_texto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="400dp"
        android:text="Información de Pago"
        android:textColor="@color/colorGray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_fecha_compra"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/custom_edit_txt"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/title_fecha"
        android:textColorHint="#60000000"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="376dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/separate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>