<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_reclamo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_inmo_store"
    tools:context=".ui.contact.ReclamoFragment">

    <ImageView
        android:id="@+id/imgPhoto3"
        android:layout_width="100dp"
        android:layout_height="79dp"
        android:src="@drawable/logo_inmo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_title_reclamo"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_title"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txt_descripcion_reclamo"
        android:layout_width="343dp"
        android:layout_height="129dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_descripcion_solicitud"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_asunto_reclamo"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/custom_edit_txt"
        android:ems="10"
        android:hint="@string/title_asunto"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="#60000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPhoto2"
        android:layout_width="168dp"
        android:layout_height="166dp"
        android:layout_marginTop="404dp"
        android:src="@drawable/ic_image_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_take_photo2"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/button_first_bg"
        android:drawableRight="@android:drawable/ic_menu_camera"
        android:padding="16dp"
        android:text="@string/title_photo"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_registro_reclamo"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginTop="576dp"
        android:background="@drawable/button_first_bg"
        android:text="@string/title_ingresar_recl"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_generar_reclamo"
        android:textColor="@color/colorGray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <Button
        android:id="@+id/btn_return_reclamo"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_return_left"
        android:pointerIcon="wait"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/hid_img_reclamo"
        android:layout_width="5dp"
        android:layout_height="4dp"
        android:layout_marginTop="504dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>